--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,22 +13,20 @@
 
     <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                   android:orientation="vertical"
+                  android:layout_marginBottom="30dp"
                   android:layout_gravity="bottom">
 
         <SeekBar android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:id="@+id/saturationseekbar" android:progress="50" android:max="100"/>
 
         <SeekBar android:layout_width="match_parent" android:layout_height="wrap_content"
+                 android:layout_marginTop="20dp"
                  android:id="@+id/brightnessseekbar" android:progress="50" android:max="100"/>
 
         <SeekBar android:layout_width="match_parent" android:layout_height="wrap_content"
+                 android:layout_marginTop="20dp"
                  android:id="@+id/contrastseekbar" android:progress="25" android:max="100"/>
 
-        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
-                android:text="Gallery"/>
-
-        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
-                android:text="Camera"/>
 
     </LinearLayout>
 
